fix z-index to top button

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ a{
     border: none;
     color: #ffffff;
     display: none;
+    z-index: 999;
 }
 header{
     background: #FFBA00;
